services/jellyfin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
  namespace: services
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.local.hohepa.dev`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: local-hohepa-dev-tls
